--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import org.jetbrains.kotlin.VersionGenerator
 
 buildscript {
-    ext.rootBuildDirectory = file('..')
+    ext.rootBuildDirectory = file('../')
 
     apply from: "$rootBuildDirectory/gradle/loadRootProperties.gradle"
     apply from: "$rootBuildDirectory/gradle/kotlinGradlePlugin.gradle"
@@ -32,19 +31,6 @@ repositories {
     maven {
         url kotlinCompilerRepo
     }
-}
-
-task generateCompilerVersion(type: VersionGenerator){}
-
-sourceSets {
-    main.kotlin {
-        srcDir 'src/main/kotlin'
-        srcDir generateCompilerVersion.versionSourceDirectory
-    }
-}
-
-compileKotlin{
-    dependsOn('generateCompilerVersion')
 }
 
 jar {
