[build][shared] added clean up of generated sources

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,13 @@ compileKotlin{
     dependsOn('generateCompilerVersion')
 }
 
+clean {
+    doFirst {
+        if (generateCompilerVersion.versionSourceDirectory.exists())
+             generateCompilerVersion.versionSourceDirectory.delete()
+    }
+}
+
 jar {
     archiveName = "shared.jar"
 }
