[compiler][update] 1.3-M2-eap-33 / build: 1.3-M1-eap-77

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ version = konanVersion
 repositories {
     mavenCentral()
     maven {
-        url kotlinCompilerRepo
+        url buildKotlinCompilerRepo
     }
 }
 
