--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ repositories {
     }
 }
 
+// FIXME(ddol): KLIB-REFACTORING-CLEANUP: drop generation of KonanVersion!
 task generateCompilerVersion(type: VersionGenerator){}
 
 sourceSets {
