--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ task generateCompilerVersion(type: VersionGenerator){}
 sourceSets {
     main.kotlin {
         srcDir 'src/main/kotlin'
+        srcDir 'src/library/kotlin'
         srcDir generateCompilerVersion.versionSourceDirectory
     }
 }
