--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
 import org.jetbrains.kotlin.VersionGenerator
 
 buildscript {
-    ext.rootBuildDirectory = file('..')
+    ext.rootBuildDirectory = rootDir
 
     apply from: "$rootBuildDirectory/gradle/loadRootProperties.gradle"
     apply from: "$rootBuildDirectory/gradle/kotlinGradlePlugin.gradle"
