Move the local repo back into the build dir

--- a/build.gradle
+++ b/build.gradle
@@ -46,15 +46,11 @@ jar {
     archiveName = "shared.jar"
 }
 
-clean {
-    delete "$projectDir/maven"
-}
-
 // TODO: Add bintray publishing.
 publishing {
     repositories {
         maven {
-            url = "$projectDir/maven"
+            url = "$buildDir/repo"
         }
     }
 
