--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 #
 
 # A version of the Kotlin "toolchain" (compiler, runtime, stdlib etc) used by the build script.
-buildKotlinVersion=1.3.0-rc-116
-buildKotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_130_CompilerAllPlugins),number:1.3.0-rc-116,tag:kotlin-native,pinned:true/artifacts/content/maven
+buildKotlinVersion=1.3.30-dev-1297
+buildKotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_dev_CompilerAllPlugins),number:1.3.30-dev-1297,pinned:true/artifacts/content/maven
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 
-sharedVersion=0.9.3
+sharedVersion=1.2.0
