--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ buildKotlinVersion=1.3.30-dev-1297
 buildKotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_dev_CompilerAllPlugins),number:1.3.30-dev-1297,pinned:true/artifacts/content/maven
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 
-sharedVersion=1.2.0
+version=1.0-SNAPSHOT
