--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,16 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$buildKotlinVersion"
 }
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
+    archiveClassifier = 'sources'
+}
+
+task javadocJar(type: Jar) {
+    from javadoc
+    archiveClassifier = 'javadoc'
+}
+
 // TODO: Add bintray publishing.
 publishing {
     repositories {
@@ -52,6 +62,8 @@ publishing {
     publications {
         shared(MavenPublication) {
             from components.java
+            artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
